#32 jdk 17 pipeline fix